--- a/index.html
+++ b/index.html
@@ -103,14 +103,97 @@
                 Based in Bangladesh
               </h2>
               <img src="img/Frame 50.png" alt="" />
-              <p><span>Previously </span>Germany</p>
+              <h6><span>Previously </span>UAE</h6>
+            </div>
+            <p>
+              For the last few years, I’ve worked full-time remotely (mostly for
+              clients from the US and Canada). So far, so good. A unique
+              experience with lots of video calls, Slack messages.
+            </p>
+
+            <div class="right-side_btn">
+              <a href="#">More about me</a>
             </div>
           </div>
 
           <div class="left_side_sect2">
-            <img src="img/Rectangle 3125.png" alt="" />
+            <div class="main_img">
+              <img src="img/Rectangle 3125.png" alt="" />
+            </div>
+            <div class="secnd-img">
+              <img src="img/Dots.png" alt="" />
+            </div>
           </div>
         </div>
+      </div>
+    </section>
+
+    <section class="section-3">
+      <div class="container">
+        <div class="sect-3_heading">
+          <h2>
+            Less talk. <br />
+            More Designs
+          </h2>
+          <p>
+            It’s time to see some work. Here are a few projects, pitch work and  <br>
+             
+            design explorations I’ve done for clients. A sneak peek works
+          </p>
+        </div>
+        <div class="section-3_content">
+          <div class="content-card first">
+             <a href="https://dmabubakkar0.github.io/HOME-PAGE/" target="_blank"> 
+              <img src="img/Rectangle 3126.png" alt="">
+
+            </a>
+            <h6>App Design</h6>
+            <p>App designers are in charge of making an app look good, while</p>
+
+
+
+          </div>
+
+
+          <div class="content-card second">
+             <a href=" https://dmabubakkar0.github.io/LAWMATE/" target="_blank"> 
+              <img src="img/Rectangle 3128.png">
+
+            </a>
+            <h6> Dashboard Design</h6>
+            <p> A dashboard is an at a glance info preview of the most crucial</p>
+
+
+
+          </div>
+          <div class="content-card third">
+             <a href=" https://dmabubakkar0.github.io/Agancy--/" target="_blank"> 
+              <img src="img/Rectangle 3127.png" alt="">
+
+            </a>
+            <h6> Website Design</h6>
+            <p> Web design encompasses many different skills and disciplines in the</p>
+
+
+
+          </div>
+
+
+
+
+
+
+
+
+        </div>
+
+
+
+
+
+
+
+
       </div>
     </section>
   </body>
