--- a/index.html
+++ b/index.html
@@ -136,56 +136,71 @@
             More Designs
           </h2>
           <p>
-            It’s time to see some work. Here are a few projects, pitch work and  <br>
-             
+            It’s time to see some work. Here are a few projects, pitch work and
+            <br />
+
             design explorations I’ve done for clients. A sneak peek works
           </p>
         </div>
         <div class="section-3_content">
           <div class="content-card first">
-             <a href="https://dmabubakkar0.github.io/HOME-PAGE/" target="_blank"> 
-              <img src="img/Rectangle 3126.png" alt="">
-
+            <a href="https://dmabubakkar0.github.io/HOME-PAGE/" target="_blank">
+              <img src="img/Rectangle 3126.png" alt="" />
             </a>
             <h6>App Design</h6>
             <p>App designers are in charge of making an app look good, while</p>
-
-
-
           </div>
-
 
           <div class="content-card second">
-             <a href=" https://dmabubakkar0.github.io/LAWMATE/" target="_blank"> 
-              <img src="img/Rectangle 3128.png">
-
+            <a href=" https://dmabubakkar0.github.io/LAWMATE/" target="_blank">
+              <img src="img/Rectangle 3128.png" />
             </a>
-            <h6> Dashboard Design</h6>
-            <p> A dashboard is an at a glance info preview of the most crucial</p>
-
-
-
+            <h6>Dashboard Design</h6>
+            <p>
+              A dashboard is an at a glance info preview of the most crucial
+            </p>
           </div>
           <div class="content-card third">
-             <a href=" https://dmabubakkar0.github.io/Agancy--/" target="_blank"> 
-              <img src="img/Rectangle 3127.png" alt="">
-
+            <a href=" https://dmabubakkar0.github.io/Agancy--/" target="_blank">
+              <img src="img/Rectangle 3127.png" alt="" />
             </a>
-            <h6> Website Design</h6>
-            <p> Web design encompasses many different skills and disciplines in the</p>
-
-
-
+            <h6>Website Design</h6>
+            <p>
+              Web design encompasses many different skills and disciplines in
+              the
+            </p>
           </div>
+        </div>
+ 
+        <div class="secion-3_btn" >
+          <a href=" https://github.com/dmabubakkar0?tab=repositories" target="_blank">
+
+            <button class="animated-button" >
+              <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+                ></path>
+              </svg>
+              <span class="text"> See more stuffs</span>
+              <span class="circle"></span>
+              <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+                <path
+                  d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
+                ></path>
+              </svg>
+            </button>
 
 
 
-
+          </a>
+          
 
 
 
 
         </div>
+
+
 
 
 
