--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="stylesheet" href="silder/silder.css" />
+    <link rel="stylesheet" href="silder/silder-config.css">
 
     <title>mY ProTfiLiO</title>
   </head>
@@ -171,45 +173,199 @@
             </p>
           </div>
         </div>
- 
-        <div class="secion-3_btn" >
-          <a href=" https://github.com/dmabubakkar0?tab=repositories" target="_blank">
 
-            <button class="animated-button" >
-              <svg viewBox="0 0 24 24" class="arr-2" xmlns="http://www.w3.org/2000/svg">
+        <div class="secion-3_btn">
+          <a
+            href=" https://github.com/dmabubakkar0?tab=repositories"
+            target="_blank"
+          >
+            <button class="animated-button">
+              <svg
+                viewBox="0 0 24 24"
+                class="arr-2"
+                xmlns="http://www.w3.org/2000/svg"
+              >
                 <path
                   d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
                 ></path>
               </svg>
               <span class="text"> See more stuffs</span>
               <span class="circle"></span>
-              <svg viewBox="0 0 24 24" class="arr-1" xmlns="http://www.w3.org/2000/svg">
+              <svg
+                viewBox="0 0 24 24"
+                class="arr-1"
+                xmlns="http://www.w3.org/2000/svg"
+              >
                 <path
                   d="M16.1716 10.9999L10.8076 5.63589L12.2218 4.22168L20 11.9999L12.2218 19.778L10.8076 18.3638L16.1716 12.9999H4V10.9999H16.1716Z"
                 ></path>
               </svg>
             </button>
-
-
-
           </a>
-          
-
-
-
-
         </div>
-
-
-
-
-
-
-
-
-
-
       </div>
     </section>
+    <section class="section-4">
+      <div class="container">
+        <div class="section-4_content">
+          <div class="section-04_heading">
+            <h5>
+              From big to small clients, <br />
+              two things I always promise :
+            </h5>
+          </div>
+
+          <div class="about_freelance">
+            <div class="first_about">
+              <div class="one"><a href="#" target="_blank"> 1 </a></div>
+
+              <div class="about-text">
+                <h4>Design you will love</h4>
+                <p>
+                  This is what I love to do, so I’ll make sure you are happy
+                  with the results. We’ll work as a team and we’ll get there!
+                </p>
+              </div>
+            </div>
+
+            <div class="secend_about">
+              <div class="one"><a href="#" target="_blank"> 2 </a></div>
+
+              <div class="about-text">
+                <h4>Healthy freelance relationship</h4>
+                <p>
+                  No dramas or difficult relationships. I'm here to make your
+                  life easier, solve problems and help you grow your business.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="skill_show">
+            <div class="exprience">
+              <h6>02 <span> Years Experience</span></h6>
+
+              <h6>50+ <span> Satisfied Clients</span></h6>
+
+              <h6>100+ <span>Projects Completed</span></h6>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="section-silder">
+      <div class="container">
+        <div class="silder-prent">
+          <div class="slider_part">
+            <div class="owl-carousel owl-theme slider_profile">
+              <div class="item">
+                <div class="slider_card">
+                  <img class="profile" src="img/Clients.png" alt="" />
+                  <div class="slider_text">
+                    <img class="quote" src="img/”.png" alt="" />
+                    <p class="feedback">
+                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                    </p>
+                    <p class="name"> Christiano Messi</p>
+                    <p class="title"> Product manager @ Shopify</p>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+              <div class="item">
+                <div class="slider_card">
+                  <img class="profile" src="img/Clients.png" alt="" />
+                  <div class="slider_text">
+                    <img class="quote" src="img/”.png" alt="" />
+                    <p class="feedback">
+                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                    </p>
+                    <p class="name"> Christiano Messi</p>
+                    <p class="title"> Product manager @ Shopify</p>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+
+              <div class="item">
+                <div class="slider_card">
+                  <img class="profile" src="img/Clients.png" alt="" />
+                  <div class="slider_text">
+                    <img class="quote" src="img/”.png" alt="" />
+                    <p class="feedback">
+                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                    </p>
+                    <p class="name"> Christiano Messi</p>
+                    <p class="title"> Product manager @ Shopify</p>
+                  </div>
+                </div>
+              </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+    <script src="silder/silder-config.js"></script>
+    <script src="silder/silder.js"></script>
   </body>
 </html>
