--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="silder/silder.css" />
-    <link rel="stylesheet" href="silder/silder-config.css">
+    <link rel="stylesheet" href="silder/silder-config.css" />
 
     <title>mY ProTfiLiO</title>
   </head>
@@ -27,7 +27,13 @@
                 <li><a href="#" id="active">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Works</a></li>
-                <li><img src="img/eva_menu-fill.png" alt="" /></li>
+                <li>  <label class="hamburger">
+                  <input type="checkbox">
+                  <svg viewBox="0 0 32 32">
+                    <path class="line line-top-bottom" d="M27 10 13 10C10.8 10 9 8.2 9 6 9 3.5 10.8 2 13 2 15.2 2 17 3.8 17 6L17 26C17 28.2 18.8 30 21 30 23.2 30 25 28.2 25 26 25 23.8 23.2 22 21 22L7 22"></path>
+                    <path class="line" d="M7 16 27 16"></path>
+                  </svg>
+                </label>        </li>
               </ul>
             </div>
 
@@ -264,17 +270,15 @@
                   <div class="slider_text">
                     <img class="quote" src="img/”.png" alt="" />
                     <p class="feedback">
-                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                      I don’t know what else to say, this is something that you
+                      haven’t seen before unique design, lightweight and super
+                      outstanding support.
                     </p>
-                    <p class="name"> Christiano Messi</p>
-                    <p class="title"> Product manager @ Shopify</p>
+                    <p class="name">Christiano Messi</p>
+                    <p class="title">Product manager @ Shopify</p>
                   </div>
                 </div>
               </div>
-
-
-
-
 
               <div class="item">
                 <div class="slider_card">
@@ -282,18 +286,15 @@
                   <div class="slider_text">
                     <img class="quote" src="img/”.png" alt="" />
                     <p class="feedback">
-                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                      I don’t know what else to say, this is something that you
+                      haven’t seen before unique design, lightweight and super
+                      outstanding support.
                     </p>
-                    <p class="name"> Christiano Messi</p>
-                    <p class="title"> Product manager @ Shopify</p>
+                    <p class="name">Christiano Messi</p>
+                    <p class="title">Product manager @ Shopify</p>
                   </div>
                 </div>
               </div>
-
-
-
-
-
 
               <div class="item">
                 <div class="slider_card">
@@ -301,59 +302,142 @@
                   <div class="slider_text">
                     <img class="quote" src="img/”.png" alt="" />
                     <p class="feedback">
-                      I don’t know what else to say, this is something that you haven’t seen before unique design, lightweight and super outstanding support.
+                      I don’t know what else to say,  this is something that you 
+                      haven’t seen before unique  design, lightweight and super 
+                      outstanding support.
                     </p>
-                    <p class="name"> Christiano Messi</p>
-                    <p class="title"> Product manager @ Shopify</p>
+                    <p class="name">Christiano Messi</p>
+                    <p class="title">Product manager @ Shopify</p>
                   </div>
                 </div>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <section class="section-footer">
+      <div class="container">
+        <div class="footer-content">
+          <h4>
+            That’s all about me, <br />
+            feel free to say hi.
+          </h4>
+          <p>
+            l make it easy for you… This is how you pronounce <br />
+            my name — <span>Bakkar -- <img src="img/Play.png" alt="" /></span> I
+            hope to hear from you!
+          </p>
 
+          <div class="socile-meadia">
+            <div class="main">
+              <div class="up">
+                <a
+                  href="https://www.instagram.com/bakkar__ig/ "
+                  target="_blank"
+                >
+                  <button class="card1">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      xmlns:xlink="http://www.w3.org/1999/xlink"
+                      viewBox="0,0,256,256"
+                      width="30px"
+                      height="30px"
+                      fill-rule="nonzero"
+                      class="instagram"
+                    >
+                      <g
+                        fill-rule="nonzero"
+                        stroke="none"
+                        stroke-width="1"
+                        stroke-linecap="butt"
+                        stroke-linejoin="miter"
+                        stroke-miterlimit="10"
+                        stroke-dasharray=""
+                        stroke-dashoffset="0"
+                        font-family="none"
+                        font-weight="none"
+                        font-size="none"
+                        text-anchor="none"
+                        style="mix-blend-mode: normal"
+                      >
+                        <g transform="scale(8,8)">
+                          <path
+                            d="M11.46875,5c-3.55078,0 -6.46875,2.91406 -6.46875,6.46875v9.0625c0,3.55078 2.91406,6.46875 6.46875,6.46875h9.0625c3.55078,0 6.46875,-2.91406 6.46875,-6.46875v-9.0625c0,-3.55078 -2.91406,-6.46875 -6.46875,-6.46875zM11.46875,7h9.0625c2.47266,0 4.46875,1.99609 4.46875,4.46875v9.0625c0,2.47266 -1.99609,4.46875 -4.46875,4.46875h-9.0625c-2.47266,0 -4.46875,-1.99609 -4.46875,-4.46875v-9.0625c0,-2.47266 1.99609,-4.46875 4.46875,-4.46875zM21.90625,9.1875c-0.50391,0 -0.90625,0.40234 -0.90625,0.90625c0,0.50391 0.40234,0.90625 0.90625,0.90625c0.50391,0 0.90625,-0.40234 0.90625,-0.90625c0,-0.50391 -0.40234,-0.90625 -0.90625,-0.90625zM16,10c-3.30078,0 -6,2.69922 -6,6c0,3.30078 2.69922,6 6,6c3.30078,0 6,-2.69922 6,-6c0,-3.30078 -2.69922,-6 -6,-6zM16,12c2.22266,0 4,1.77734 4,4c0,2.22266 -1.77734,4 -4,4c-2.22266,0 -4,-1.77734 -4,-4c0,-2.22266 1.77734,-4 4,-4z"
+                          ></path>
+                        </g>
+                      </g>
+                    </svg>
+                  </button>
+                </a>
 
+                <a href="https://twitter.com/abu_bakkar06 " target="_blank">
+                  <button class="card2">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 48 48"
+                      width="30px"
+                      height="30px"
+                      class="twitter"
+                    >
+                      <path
+                        d="M42,12.429c-1.323,0.586-2.746,0.977-4.247,1.162c1.526-0.906,2.7-2.351,3.251-4.058c-1.428,0.837-3.01,1.452-4.693,1.776C34.967,9.884,33.05,9,30.926,9c-4.08,0-7.387,3.278-7.387,7.32c0,0.572,0.067,1.129,0.193,1.67c-6.138-0.308-11.582-3.226-15.224-7.654c-0.64,1.082-1,2.349-1,3.686c0,2.541,1.301,4.778,3.285,6.096c-1.211-0.037-2.351-0.374-3.349-0.914c0,0.022,0,0.055,0,0.086c0,3.551,2.547,6.508,5.923,7.181c-0.617,0.169-1.269,0.263-1.941,0.263c-0.477,0-0.942-0.054-1.392-0.135c0.94,2.902,3.667,5.023,6.898,5.086c-2.528,1.96-5.712,3.134-9.174,3.134c-0.598,0-1.183-0.034-1.761-0.104C9.268,36.786,13.152,38,17.321,38c13.585,0,21.017-11.156,21.017-20.834c0-0.317-0.01-0.633-0.025-0.945C39.763,15.197,41.013,13.905,42,12.429"
+                      ></path>
+                    </svg>
+                  </button>
+                </a>
+              </div>
+              <div class="down">
+                <a href="https://github.com/dmabubakkar0" target="_blank">
+                  <button class="card3">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      viewBox="0 0 30 30"
+                      width="30px"
+                      height="30px"
+                      class="github"
+                    >
+                      <path
+                        d="M15,3C8.373,3,3,8.373,3,15c0,5.623,3.872,10.328,9.092,11.63C12.036,26.468,12,26.28,12,26.047v-2.051 c-0.487,0-1.303,0-1.508,0c-0.821,0-1.551-0.353-1.905-1.009c-0.393-0.729-0.461-1.844-1.435-2.526 c-0.289-0.227-0.069-0.486,0.264-0.451c0.615,0.174,1.125,0.596,1.605,1.222c0.478,0.627,0.703,0.769,1.596,0.769 c0.433,0,1.081-0.025,1.691-0.121c0.328-0.833,0.895-1.6,1.588-1.962c-3.996-0.411-5.903-2.399-5.903-5.098 c0-1.162,0.495-2.286,1.336-3.233C9.053,10.647,8.706,8.73,9.435,8c1.798,0,2.885,1.166,3.146,1.481C13.477,9.174,14.461,9,15.495,9 c1.036,0,2.024,0.174,2.922,0.483C18.675,9.17,19.763,8,21.565,8c0.732,0.731,0.381,2.656,0.102,3.594 c0.836,0.945,1.328,2.066,1.328,3.226c0,2.697-1.904,4.684-5.894,5.097C18.199,20.49,19,22.1,19,23.313v2.734 c0,0.104-0.023,0.179-0.035,0.268C23.641,24.676,27,20.236,27,15C27,8.373,21.627,3,15,3z"
+                      ></path>
+                    </svg>
+                  </button>
+                </a>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+                <a
+                  href=" www.linkedin.com/in/muhammad-abu-bakkar-978030276"
+                  target="_blank"
+                >
+                  <button class="card4">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      x="0px"
+                      y="0px"
+                      width="30"
+                      height="30"
+                      viewBox="0 0 48 48"
+                    >
+                      <path
+                        fill="#0078d4"
+                        d="M42,37c0,2.762-2.238,5-5,5H11c-2.761,0-5-2.238-5-5V11c0-2.762,2.239-5,5-5h26c2.762,0,5,2.238,5,5	V37z"
+                      ></path>
+                      <path
+                        d="M30,37V26.901c0-1.689-0.819-2.698-2.192-2.698c-0.815,0-1.414,0.459-1.779,1.364	c-0.017,0.064-0.041,0.325-0.031,1.114L26,37h-7V18h7v1.061C27.022,18.356,28.275,18,29.738,18c4.547,0,7.261,3.093,7.261,8.274	L37,37H30z M11,37V18h3.457C12.454,18,11,16.528,11,14.499C11,12.472,12.478,11,14.514,11c2.012,0,3.445,1.431,3.486,3.479	C18,16.523,16.521,18,14.485,18H18v19H11z"
+                        opacity=".05"
+                      ></path>
+                      <path
+                        d="M30.5,36.5v-9.599c0-1.973-1.031-3.198-2.692-3.198c-1.295,0-1.935,0.912-2.243,1.677	c-0.082,0.199-0.071,0.989-0.067,1.326L25.5,36.5h-6v-18h6v1.638c0.795-0.823,2.075-1.638,4.238-1.638	c4.233,0,6.761,2.906,6.761,7.774L36.5,36.5H30.5z M11.5,36.5v-18h6v18H11.5z M14.457,17.5c-1.713,0-2.957-1.262-2.957-3.001	c0-1.738,1.268-2.999,3.014-2.999c1.724,0,2.951,1.229,2.986,2.989c0,1.749-1.268,3.011-3.015,3.011H14.457z"
+                        opacity=".07"
+                      ></path>
+                      <path
+                        fill="#fff"
+                        d="M12,19h5v17h-5V19z M14.485,17h-0.028C12.965,17,12,15.888,12,14.499C12,13.08,12.995,12,14.514,12	c1.521,0,2.458,1.08,2.486,2.499C17,15.887,16.035,17,14.485,17z M36,36h-5v-9.099c0-2.198-1.225-3.698-3.192-3.698	c-1.501,0-2.313,1.012-2.707,1.99C24.957,25.543,25,26.511,25,27v9h-5V19h5v2.616C25.721,20.5,26.85,19,29.738,19	c3.578,0,6.261,2.25,6.261,7.274L36,36L36,36z"
+                      ></path>
+                    </svg>
+                  </button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
