--- a/index.html
+++ b/index.html
@@ -75,16 +75,16 @@
               <img src="img/3d-design 1.png" alt="" />
               <h3>Design</h3>
               <p class="tow">
-                A plan or drawing produced to show the look and function
+                A plan or drawing produced <br> to show the look and function
               </p>
               <p class="one">Know more</p>
             </div>
 
             <div class="hero_card card-2">
               <img src="img/Group 9807.png" alt="" />
-              <h3>Development</h3>
-              <p class="tow">
-                Development is defined as the process of growth or new
+              <h3 class="hero-h3">Development</h3>
+              <p class="tow" id="hero-3">
+                Development is defined as <br>  the process of growth or new
               </p>
               <p class="one">Know more</p>
             </div>
@@ -93,7 +93,7 @@
               <img src="img/Group 9808.png" alt="" />
               <h3>Branding</h3>
               <p class="tow">
-                The marketing practice of creating a name, symbol and
+                The marketing practice of <br> creating a name, symbol and
               </p>
               <p class="one">Know more</p>
             </div>
@@ -157,7 +157,7 @@
               <img src="img/Rectangle 3126.png" alt="" />
             </a>
             <h6>App Design</h6>
-            <p>App designers are in charge of making an app look good, while</p>
+            <p>App designers are in charge of <br> making an app look good, while</p>
           </div>
 
           <div class="content-card second">
@@ -166,7 +166,7 @@
             </a>
             <h6>Dashboard Design</h6>
             <p>
-              A dashboard is an at a glance info preview of the most crucial
+              A dashboard is an at a glance <br> info preview of the most crucial
             </p>
           </div>
           <div class="content-card third">
@@ -175,7 +175,7 @@
             </a>
             <h6>Website Design</h6>
             <p>
-              Web design encompasses many different skills and disciplines in
+              Web design encompasses many <br> different skills and disciplines in
               the
             </p>
           </div>
